--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ece0d8cd",
+   "id": "6cd23cb1",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eea19ad",
+   "id": "cee25606",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f540b98",
+   "id": "59f77f0e",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6ac0cff",
+   "id": "d060d471",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a26976",
+   "id": "1892f764",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93d10f9c",
+   "id": "7ac0ac0e",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1ff04995",
+   "id": "d482f5cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:21:34.167532Z",
-     "iopub.status.busy": "2024-09-06T08:21:34.167341Z",
-     "iopub.status.idle": "2024-09-06T08:21:38.362543Z",
-     "shell.execute_reply": "2024-09-06T08:21:38.361950Z"
+     "iopub.execute_input": "2024-09-06T08:52:50.353225Z",
+     "iopub.status.busy": "2024-09-06T08:52:50.352776Z",
+     "iopub.status.idle": "2024-09-06T08:52:54.622156Z",
+     "shell.execute_reply": "2024-09-06T08:52:54.621602Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9bfa1ac",
+   "id": "681eb6ea",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "422de755",
+   "id": "a587b59c",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a07a46",
+   "id": "a6ade458",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02541640",
+   "id": "8103b1af",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "383db3e5",
+   "id": "580620da",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5983bc9",
+   "id": "457960eb",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c30b025",
+   "id": "015a84a2",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae4ef6c4",
+   "id": "38287c30",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5bc184c4",
+   "id": "26f8967e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:21:38.365348Z",
-     "iopub.status.busy": "2024-09-06T08:21:38.364959Z",
-     "iopub.status.idle": "2024-09-06T08:21:40.207900Z",
-     "shell.execute_reply": "2024-09-06T08:21:40.207305Z"
+     "iopub.execute_input": "2024-09-06T08:52:54.624841Z",
+     "iopub.status.busy": "2024-09-06T08:52:54.624390Z",
+     "iopub.status.idle": "2024-09-06T08:52:56.523029Z",
+     "shell.execute_reply": "2024-09-06T08:52:56.522429Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab186b52",
+   "id": "35c4bd9e",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "510c0f4d",
+   "id": "0a9a2b8e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:21:40.210381Z",
-     "iopub.status.busy": "2024-09-06T08:21:40.209923Z",
-     "iopub.status.idle": "2024-09-06T08:21:40.213496Z",
-     "shell.execute_reply": "2024-09-06T08:21:40.212888Z"
+     "iopub.execute_input": "2024-09-06T08:52:56.525601Z",
+     "iopub.status.busy": "2024-09-06T08:52:56.525200Z",
+     "iopub.status.idle": "2024-09-06T08:52:56.528824Z",
+     "shell.execute_reply": "2024-09-06T08:52:56.528134Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6ee82ba",
+   "id": "e376a039",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdcad8ee",
+   "id": "e7ccf40c",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c436898",
+   "id": "3bb8a480",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0125a4e1",
+   "id": "f045664b",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c9a9794c",
+   "id": "2bd1713b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:21:40.215796Z",
-     "iopub.status.busy": "2024-09-06T08:21:40.215479Z",
-     "iopub.status.idle": "2024-09-06T08:21:40.258981Z",
-     "shell.execute_reply": "2024-09-06T08:21:40.258379Z"
+     "iopub.execute_input": "2024-09-06T08:52:56.531146Z",
+     "iopub.status.busy": "2024-09-06T08:52:56.530787Z",
+     "iopub.status.idle": "2024-09-06T08:52:56.575230Z",
+     "shell.execute_reply": "2024-09-06T08:52:56.574650Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96b450a7",
+   "id": "6a9413f0",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "410e9a05",
+   "id": "0a471cca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:21:40.261368Z",
-     "iopub.status.busy": "2024-09-06T08:21:40.261026Z",
-     "iopub.status.idle": "2024-09-06T08:21:40.326890Z",
-     "shell.execute_reply": "2024-09-06T08:21:40.326275Z"
+     "iopub.execute_input": "2024-09-06T08:52:56.577736Z",
+     "iopub.status.busy": "2024-09-06T08:52:56.577311Z",
+     "iopub.status.idle": "2024-09-06T08:52:56.643918Z",
+     "shell.execute_reply": "2024-09-06T08:52:56.643312Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11b0bc38",
+   "id": "f21a566d",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f2eb7dd",
+   "id": "d2e36dfe",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b3f35040",
+   "id": "577b3dc6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:21:40.329468Z",
-     "iopub.status.busy": "2024-09-06T08:21:40.329105Z",
-     "iopub.status.idle": "2024-09-06T08:21:40.358001Z",
-     "shell.execute_reply": "2024-09-06T08:21:40.357500Z"
+     "iopub.execute_input": "2024-09-06T08:52:56.646285Z",
+     "iopub.status.busy": "2024-09-06T08:52:56.646087Z",
+     "iopub.status.idle": "2024-09-06T08:52:56.675586Z",
+     "shell.execute_reply": "2024-09-06T08:52:56.674995Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaafb088",
+   "id": "310faf36",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9af04a3e",
+   "id": "2a90d109",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "470a1c96",
+   "id": "4f7bdae5",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bd7565d",
+   "id": "703774c1",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a1145e2",
+   "id": "08283ece",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "05f38d9b",
+   "id": "fab66b85",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:21:40.360547Z",
-     "iopub.status.busy": "2024-09-06T08:21:40.360221Z",
-     "iopub.status.idle": "2024-09-06T08:21:40.364580Z",
-     "shell.execute_reply": "2024-09-06T08:21:40.363946Z"
+     "iopub.execute_input": "2024-09-06T08:52:56.678238Z",
+     "iopub.status.busy": "2024-09-06T08:52:56.677866Z",
+     "iopub.status.idle": "2024-09-06T08:52:56.682180Z",
+     "shell.execute_reply": "2024-09-06T08:52:56.681704Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d616af",
+   "id": "a8df8009",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4a82de6e",
+   "id": "c9974dd1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:21:40.366864Z",
-     "iopub.status.busy": "2024-09-06T08:21:40.366500Z",
-     "iopub.status.idle": "2024-09-06T08:21:40.369439Z",
-     "shell.execute_reply": "2024-09-06T08:21:40.368944Z"
+     "iopub.execute_input": "2024-09-06T08:52:56.684297Z",
+     "iopub.status.busy": "2024-09-06T08:52:56.684010Z",
+     "iopub.status.idle": "2024-09-06T08:52:56.687134Z",
+     "shell.execute_reply": "2024-09-06T08:52:56.686505Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab29b26f",
+   "id": "8c060633",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "253dd0fa",
+   "id": "fca65d49",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:21:40.371735Z",
-     "iopub.status.busy": "2024-09-06T08:21:40.371386Z",
-     "iopub.status.idle": "2024-09-06T08:21:42.946556Z",
-     "shell.execute_reply": "2024-09-06T08:21:42.945970Z"
+     "iopub.execute_input": "2024-09-06T08:52:56.689521Z",
+     "iopub.status.busy": "2024-09-06T08:52:56.689144Z",
+     "iopub.status.idle": "2024-09-06T08:52:59.280057Z",
+     "shell.execute_reply": "2024-09-06T08:52:59.279449Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18e9d944",
+   "id": "5f2c92ef",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04fa30b5",
+   "id": "ecdf2b1f",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04139bc6",
+   "id": "a8512406",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "617b0b88",
+   "id": "af3e4c1a",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ae0c6aa2",
+   "id": "ea6dcb7e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:21:42.949285Z",
-     "iopub.status.busy": "2024-09-06T08:21:42.948789Z",
-     "iopub.status.idle": "2024-09-06T08:21:42.952545Z",
-     "shell.execute_reply": "2024-09-06T08:21:42.951928Z"
+     "iopub.execute_input": "2024-09-06T08:52:59.282792Z",
+     "iopub.status.busy": "2024-09-06T08:52:59.282407Z",
+     "iopub.status.idle": "2024-09-06T08:52:59.286135Z",
+     "shell.execute_reply": "2024-09-06T08:52:59.285545Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f6ed5530cc0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb878ec8d60>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e62aaf5c",
+   "id": "475bf982",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14e91920",
+   "id": "e9b9e50e",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c16a87a7",
+   "id": "456ad846",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f57b5aa",
+   "id": "7750ba84",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a9f5daaa",
+   "id": "b97f7b18",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:21:42.954863Z",
-     "iopub.status.busy": "2024-09-06T08:21:42.954479Z",
-     "iopub.status.idle": "2024-09-06T08:21:42.957654Z",
-     "shell.execute_reply": "2024-09-06T08:21:42.957115Z"
+     "iopub.execute_input": "2024-09-06T08:52:59.288680Z",
+     "iopub.status.busy": "2024-09-06T08:52:59.288278Z",
+     "iopub.status.idle": "2024-09-06T08:52:59.291613Z",
+     "shell.execute_reply": "2024-09-06T08:52:59.291114Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "19c9bb28",
+   "id": "973bd7b4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:21:42.959946Z",
-     "iopub.status.busy": "2024-09-06T08:21:42.959627Z",
-     "iopub.status.idle": "2024-09-06T08:21:44.038451Z",
-     "shell.execute_reply": "2024-09-06T08:21:44.037900Z"
+     "iopub.execute_input": "2024-09-06T08:52:59.293759Z",
+     "iopub.status.busy": "2024-09-06T08:52:59.293384Z",
+     "iopub.status.idle": "2024-09-06T08:53:00.373273Z",
+     "shell.execute_reply": "2024-09-06T08:53:00.372658Z"
     }
    },
    "outputs": [
